--- a/travel-ai-core/pom.xml
+++ b/travel-ai-core/pom.xml
@@ -37,6 +37,12 @@
             <groupId>org.springframework.ai</groupId>
             <artifactId>spring-ai-starter-model-openai</artifactId>
             <version>${spring-ai.version}</version>
+<!--            <exclusions>-->
+<!--                <exclusion>-->
+<!--                    <groupId>org.springframework.ai</groupId>-->
+<!--                    <artifactId>spring-ai-autoconfigure-model-tool</artifactId>-->
+<!--                </exclusion>-->
+<!--            </exclusions>-->
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -54,21 +60,6 @@
             <artifactId>spring-dotenv</artifactId>
             <version>${spring-dotenv.version}</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>io.github.a2asdk</groupId>-->
-<!--            <artifactId>a2a-java-sdk-spec</artifactId>-->
-<!--            <version>${a2a.version}</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>io.github.a2asdk</groupId>-->
-<!--            <artifactId>a2a-java-sdk-client</artifactId>-->
-<!--            <version>${a2a.version}</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>io.github.a2asdk</groupId>-->
-<!--            <artifactId>a2a-java-sdk-server-common</artifactId>-->
-<!--            <version>${a2a.version}</version>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>io.github.a2asdk</groupId>
             <artifactId>a2a-java-sdk-client</artifactId>
@@ -82,11 +73,6 @@
         <dependency>
             <groupId>io.github.a2asdk</groupId>
             <artifactId>a2a-java-sdk-client-transport-jsonrpc</artifactId>
-            <version>0.3.0.Alpha1</version>
-        </dependency>
-        <dependency>
-            <groupId>io.github.a2asdk</groupId>
-            <artifactId>a2a-java-sdk-reference-grpc</artifactId>
             <version>0.3.0.Alpha1</version>
         </dependency>
     </dependencies>
